--- a/style/main.css
+++ b/style/main.css
@@ -92,11 +92,6 @@ header .hd ul li:hover {
     background-color: #163c51;
     
 }
-/*header .hd ul li:hover {
-    cursor: pointer;
-    background-color: #484848;
-    border-radius: 40%;
-}*/
 header .slider
 {
     align-items: center;
@@ -248,6 +243,10 @@ header .slider h2 span
 .main ul {
     display: flex;
     justify-content: center;
+}
+.main ul img {
+    width: 180px;
+    height: 250px;
 }
 .tt{
     margin: 5px 20px;
