--- a/style/main.css
+++ b/style/main.css
@@ -482,8 +482,8 @@ footer .Contact li a img
         margin-left: auto;
     }
     .main ul img {
-    width: 8vh;
-    height: 25vw;
+    width: 50px;
+    height: 100px;
     }
     .tt{
         margin: 0px 9px;
